0.1.6
TODO run tool as admin
External Manpage editor program installed now checked at runtime instead of compile time.
Added user command for getting root privileges via a GUI in prefs.
Added history drop down for 'Replace'.
Added history drop down for 'Find'.
Added 'Don't Warn On File Change' to prefs.
Added 'Don't Open Duplicate File' to Prefs.
Fixed minor prefs bug.
Set 'Root' window icon (red).
Redone .desktop file.
Set window icon properly.

0.1.5
Added 'Back' button to toolbar and 'Navigation' menu.
Added 'Copy Folder Path' to tab popup menu.
Globally installed tools are not usually editable and so don't show in the 'Edit External Tools' dialog.
Globally installed tools are now shown at the top of the 'Tools' menu.
Minor 'Paste' bugfix.
Added 'Clear tool output first' option to external tools prefs. 
Changed example tool 'Comment Selection' to take advantage of the $KKEDIT_SOURCE_LANG env var.
Pass highlighting language to external tools, "%l" placeholder and $KKEDIT_SOURCE_LANG env var.
Spell check menus no longer shown if no language packs installed or other aspell problems.
Set Edit->Cut/copy/Paste sensitive.
Added redo all.
Added undo all.

0.1.4
Fixed 'New Admin Editor' not running as new process.
Fixed segfault when trying to open file without read permissions.
Added switch to ./configure to set directory of installed Qt5 docs ( default "/usr/share/doc/qt5" ).
Set the title of the docviewer correctly.
Cleaned the docviewer code.
Added a "Find API In Qt5 Docs" entry box to toolbar.
Fixed minor bug when selecting "Search In Gtk Docs" from 'Navigation' menu when no selection.
Added "Search In Qt5 Docs" to 'Navigation' menu.
Added "Search In Qt5 Docs" to context menu.
Removed QT Search from external tools.
Fixed compile error when using --disable-docviewer
Minor fix to root style.

0.1.3
Automatically chooses the 'Root Source' style when using a root window if the style has not been set.
Added a 'Root' gtksourcestyle for using a root editor.